<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name = "myName"
            type="com.example.arches_exer4_slambook.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hello_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/hello"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/name_answer"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@={myName.name}"/>

                <TextView
                    android:id="@+id/nickname_answer"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@={myName.nickname}"/>

                <TextView
                    android:id="@+id/age_answer"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@={myName.age}"/>

                <TextView
                    android:id="@+id/name_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/label_padding25"
                    android:text="@={myName.name}" />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/editTextMargin"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/nickname_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.nickname}" />

                <EditText
                    android:id="@+id/editNickname"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_nickname"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/age_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.age}" />

                <TextView
                    android:id="@+id/thanks_answer"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/thank_you_for_answering"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editAge"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/birthday_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.birthday}" />

                <EditText
                    android:id="@+id/editBirthday"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_birthday"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/phoneNumber_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.phone}" />

                <EditText
                    android:id="@+id/editPhoneNumber"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/email_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.email}" />

                <EditText
                    android:id="@+id/editEmail"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_your_email_address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/course_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.course}" />

                <EditText
                    android:id="@+id/editCourse"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_course"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.dream}" />

                <EditText
                    android:id="@+id/editDream"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_dream"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.crush}" />

                <EditText
                    android:id="@+id/editCrush"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_name_of_crush"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/message_text"
                    style="@style/textViewMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:text="@={myName.message}" />

                <EditText
                    android:id="@+id/editMessage"
                    style="@style/editTextMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:labelFor="@id/editMessage" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#E91E63"
                    android:text="@string/done"
                    android:textColor="#FFFFFF" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>